--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         container_name: service-postgres
         image: postgres:12
         environment:
-          - POSTGRES_DB=pg_service_template_db_1
+          - POSTGRES_DB=u_tasks_repository_db_1
           - POSTGRES_USER=user
           - POSTGRES_PASSWORD=password
         ports:
@@ -16,22 +16,22 @@ services:
         networks:
           - postgres
 
-    pg_service_template-container:
+    u_tasks_repository-container:
         image: ghcr.io/userver-framework/ubuntu-22.04-userver-pg:latest
         privileged: true
         environment:
-          - POSTGRES_DB=pg_service_template_db_1
+          - POSTGRES_DB=u_tasks_repository_db_1
           - POSTGRES_USER=user
           - POSTGRES_PASSWORD=password
           - PREFIX=${PREFIX:-~/.local}
-          - CCACHE_DIR=/pg_service_template/.ccache
+          - CCACHE_DIR=/u_tasks_repository/.ccache
           - CORES_DIR=/cores
         volumes:
-          - .:/pg_service_template:rw
+          - .:/u_tasks_repository:rw
           - ${TC_CORES_DIR:-./.cores}:/cores:rw
         ports:
           - 8080:8080
-        working_dir: /pg_service_template
+        working_dir: /u_tasks_repository
         entrypoint:
           - ./tests/run_as_user.sh
         depends_on:
