Fixed the service. Now it's starting and running template's functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ CPMAddPackage(
     GITHUB_REPOSITORY userver-framework/userver
     OPTIONS
     "USERVER_FEATURE_GRPC ON"
+    "USERVER_FEATURE_POSTGRESQL"
 )
 
 # Adding userver dependency
