--- a/configs/config_vars.testing.yaml
+++ b/configs/config_vars.testing.yaml
@@ -7,4 +7,5 @@ is-testing: true
 server-port: 8080
 
 # u_tasks_repository_db_1 is the service name + _ + filename of the db_1.sql
-dbconnection: 'postgresql://testsuite@localhost:15433/u_tasks_repository_db_1'
+#dbconnection: 'postgresql://testsuite@localhost:15433/u_tasks_repository_db_1'
+dbconnection: 'postgresql://u_tasks_server:1BEyhMioH{[71K;a@localhost:5432/u_tasks_repository_db_1'
