--- a/configs/static_config.yaml
+++ b/configs/static_config.yaml
@@ -1,29 +1,30 @@
+# This line will set a path to the file with the variables that will be used in this config.
+config_vars: ../configs/config_vars.yaml
+
 components_manager:
   task_processors:                  # Task processor is an executor for coroutine tasks
 
     main-task-processor:          # Make a task processor for CPU-bound couroutine tasks.
-      #worker_threads: $worker-threads         # Process tasks in 4 threads.
-      worker_threads: 2
+      worker_threads: $worker-threads         # Process tasks in 4 threads.
 
     fs-task-processor:            # Make a separate task processor for filesystem bound tasks.
-      #worker_threads: $worker-fs-threads
-      worker_threads: 2
+      worker_threads: $worker-fs-threads
 
   default_task_processor: main-task-processor
 
   components:                       # Configuring components that were registered via component_list
     server:
       listener:                 # configuring the main listening socket...
-        #port: $server-port            # ...to listen on this port and...
-        port: 8080            # ...to listen on this port and...
+        port: $server-port            # ...to listen on this port and...
         task_processor: main-task-processor    # ...process incoming requests on this task processor.
+
     logging:
       fs-task-processor: fs-task-processor
       loggers:
         default:
           file_path: '@stderr'
-          #level: $logger-level
-          level: debug
+          level: $logger-level
+          #level: debug
           overflow_behavior: discard  # Drop logs if the system is too busy to write them down.
 
     # Dynamic config options. Cache is disabled, updates are disabled.
@@ -47,6 +48,7 @@ components_manager:
       path: /tests/{action}
       method: POST
       task_processor: main-task-processor
+
     handler-ping:
       path: /ping
       method: GET
@@ -60,12 +62,21 @@ components_manager:
       task_processor: main-task-processor  # Run it on CPU bound task processor
 
     postgres-db-1:
-      #dbconnection: $dbconnection
-      dbconnection: 'postgresql://u_tasks_server:1BEyhMioH{[71K;a@localhost:5432/u_tasks_repository_db_1'
+      dbconnection: $dbconnection
       blocking_task_processor: fs-task-processor
       dns_resolver: async
       sync-start: false
       connlimit_mode: manual
+
+    handler-static:
+      path: /*
+      method: GET
+      fs-cache-component: fs-cache-main
+      task_processor: main-task-processor
+    fs-cache-main:
+      update-period: 120s
+      dir: ../static
+      fs-task-processor: fs-task-processor
 
     dns-client:
       fs-task-processor: fs-task-processor
